# shortcut-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
shortcut_generator/: __init__.py  alias_generator.py  analyzer.py  config_writer.py  history_parser.py  main.py  utils.py
shortcut_generator/tests/: test_config_writer.py
