
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shortcut-generator"
version = "0.1.0"
description = "Analyze your shell history and suggest aliases using a local tiny Ollama model (with rule-based fallback)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
]
authors = [{name="Yaron Neuman", email="neuman.yaron@gmail.com"}]

[project.scripts]
shortcut-generator = "shortcut_generator.main:main"
